# Image-pixelation

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  moc_MainWindow.cpp_parameters  pixelate.cpp
